@@ -1,5 +1,16 @@
 2011-09-10  Sam Weinig  <sam@webkit.org>
 
+        Remove JSC::isZombie() function, it did nothing and was called by no-one.
+        https://bugs.webkit.org/show_bug.cgi?id=67901
+
+        Reviewed by Andy Estes.
+
+        * JavaScriptCore.exp:
+        * runtime/JSCell.cpp:
+        * runtime/JSValue.h:
+
+2011-09-10  Sam Weinig  <sam@webkit.org>
+
         Add isInterruptedExecutionException and isTerminatedExecutionException predicates
         https://bugs.webkit.org/show_bug.cgi?id=67892
 
